; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_convolution.c_filter16_roberts.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_convolution.c_filter16_roberts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, float, float, i32*, i32**, i32, i32, i32, i32)* @filter16_roberts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter16_roberts(i32* %0, i32 %1, float %2, float %3, i32* %4, i32** %5, i32 %6, i32 %7, i32 %8, i32 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32**, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32*, align 8
  %22 = alloca i32, align 4
  %23 = alloca float, align 4
  %24 = alloca float, align 4
  store i32* %0, i32** %11, align 8
  store i32 %1, i32* %12, align 4
  store float %2, float* %13, align 4
  store float %3, float* %14, align 4
  store i32* %4, i32** %15, align 8
  store i32** %5, i32*** %16, align 8
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  %25 = load i32*, i32** %11, align 8
  store i32* %25, i32** %21, align 8
  store i32 0, i32* %22, align 4
  br label %26

26:                                               ; preds = %89, %10
  %27 = load i32, i32* %22, align 4
  %28 = load i32, i32* %12, align 4
  %29 = icmp slt i32 %27, %28
  br i1 %29, label %30, label %92

30:                                               ; preds = %26
  %31 = load i32**, i32*** %16, align 8
  %32 = getelementptr inbounds i32*, i32** %31, i64 0
  %33 = load i32*, i32** %32, align 8
  %34 = load i32, i32* %22, align 4
  %35 = mul nsw i32 2, %34
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %33, i64 %36
  %38 = call i32 @AV_RN16A(i32* %37)
  %39 = mul nsw i32 %38, 1
  %40 = load i32**, i32*** %16, align 8
  %41 = getelementptr inbounds i32*, i32** %40, i64 1
  %42 = load i32*, i32** %41, align 8
  %43 = load i32, i32* %22, align 4
  %44 = mul nsw i32 2, %43
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %42, i64 %45
  %47 = call i32 @AV_RN16A(i32* %46)
  %48 = mul nsw i32 %47, -1
  %49 = add nsw i32 %39, %48
  %50 = sitofp i32 %49 to float
  store float %50, float* %23, align 4
  %51 = load i32**, i32*** %16, align 8
  %52 = getelementptr inbounds i32*, i32** %51, i64 4
  %53 = load i32*, i32** %52, align 8
  %54 = load i32, i32* %22, align 4
  %55 = mul nsw i32 2, %54
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %53, i64 %56
  %58 = call i32 @AV_RN16A(i32* %57)
  %59 = mul nsw i32 %58, 1
  %60 = load i32**, i32*** %16, align 8
  %61 = getelementptr inbounds i32*, i32** %60, i64 3
  %62 = load i32*, i32** %61, align 8
  %63 = load i32, i32* %22, align 4
  %64 = mul nsw i32 2, %63
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %62, i64 %65
  %67 = call i32 @AV_RN16A(i32* %66)
  %68 = mul nsw i32 %67, -1
  %69 = add nsw i32 %59, %68
  %70 = sitofp i32 %69 to float
  store float %70, float* %24, align 4
  %71 = load float, float* %23, align 4
  %72 = load float, float* %23, align 4
  %73 = fmul float %71, %72
  %74 = load float, float* %24, align 4
  %75 = load float, float* %24, align 4
  %76 = fmul float %74, %75
  %77 = fadd float %73, %76
  %78 = call float @sqrtf(float %77) #3
  %79 = load float, float* %13, align 4
  %80 = fmul float %78, %79
  %81 = load float, float* %14, align 4
  %82 = fadd float %80, %81
  %83 = load i32, i32* %17, align 4
  %84 = call i32 @av_clip(float %82, i32 0, i32 %83)
  %85 = load i32*, i32** %21, align 8
  %86 = load i32, i32* %22, align 4
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds i32, i32* %85, i64 %87
  store i32 %84, i32* %88, align 4
  br label %89

89:                                               ; preds = %30
  %90 = load i32, i32* %22, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* %22, align 4
  br label %26

92:                                               ; preds = %26
  ret void
}

declare dso_local i32 @AV_RN16A(i32*) #1

declare dso_local i32 @av_clip(float, i32, i32) #1

; Function Attrs: nounwind
declare dso_local float @sqrtf(float) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
